# Template-GD32F10X-V1.0

./: CMakeLists.txt  CMakePresets.json  GD32F103C8_FLASH.ld  README.md  startup_gd32f10x_md.s
Core/Inc/: FreeRTOSConfig.h  cmsis_compiler.h  gd32f10x_it.h  gd32f10x_libopt.h  main.h
Core/Src/: freertos.c  gd32f10x_it.c  main.c  systick.c
Drivers/GD32F10x_standard_peripheral/Source/: gd32f10x_enet.c
cmake/: gcc-arm-none-eabi.cmake
cmake/gd32/: CMakeLists.txt
examples/ADC/ADC0_ADC1_regular_parallel/: main.c  readme.txt
examples/ADC/ADC0_EXTI_trigger_regular_inserted_channel/: gd32f10x_it.c  gd32f10x_it.h  main.c  readme.txt
examples/ADC/ADC0_TIMER1_trigger_inserted_channel/: gd32f10x_it.c  main.c  readme.txt
examples/ADC/ADC0_regular_channel_discontinuous_mode/: gd32f10x_it.c  main.c  readme.txt
examples/ADC/ADC0_regular_channel_with_DMA/: gd32f10x_it.c  main.c  readme.txt
examples/ADC/ADC0_software_trigger_regular_channel_polling/: gd32f10x_it.c  main.c  readme.txt  systick.h
examples/ADC/ADC0_temperature_Vref/: main.c  readme.txt  systick.h
examples/ADC/ADC1_analog_watchdog/: gd32f10x_it.c  gd32f10x_it.h  main.c  readme.txt
examples/BKP/Backup_Data/: main.c  readme.txt
examples/BKP/Tamper/: gd32f10x_it.c  gd32f10x_it.h  main.c  readme.txt
examples/CAN/communication_Loopback/: gd32f10x_it.c  main.c  readme.txt
examples/CAN/communication_among_CANs/: gd32f10x_it.c  gd32f10x_it.h  main.c  readme.txt
examples/CAN/communication_among_Devices/: gd32f10x_it.c  main.c  readme.txt
examples/CRC/CRC_calculate/: main.c  readme.txt
examples/DAC/DACC_independent_trigger_LFSR_noise/: main.c  readme.txt
examples/DAC/DACC_output_voltage/: main.c  readme.txt
examples/DAC/DACC_simultaneous_trigger_triangle_noise/: main.c  readme.txt
examples/DAC/DACC_software_trigger_LFSR_noise/: main.c  readme.txt
examples/DAC/DAC_ADC_convert/: gd32f10x_it.c  gd32f10x_it.h  main.c  readme.txt  systick.c  systick.h
examples/DAC/DAC_DMA_convert/: main.c  readme.txt
examples/DAC/DAC_EXTI_trigger/: main.c  readme.txt
examples/DAC/DAC_LFSR_noise_mode/: main.c  readme.txt
examples/DAC/DAC_triangle_noise_mode/: main.c  readme.txt
examples/DBG/Timer1_stop/: gd32f10x_it.c  main.c  readme.txt
examples/DMA/Flash_to_ram/: gd32f10x_it.c  gd32f10x_it.h  main.c  readme.txt
examples/DMA/Ram_to_ram/: main.c  readme.txt
examples/DMA/Ram_to_usart/: gd32f10x_it.c  main.c  readme.txt
examples/DMA/Reload_exti/: gd32f10x_it.c  gd32f10x_it.h  gd32f10x_libopt.h  main.c  main.h  readme.txt
examples/EXMC/LCD/: exmc_lcd.c  exmc_lcd.h  ili9320.c  ili9320.h  ili9320_font.h  main.c  picture.c  picture.h  readme.txt
examples/EXMC/NAND/: exmc_nandflash.c  exmc_nandflash.h  main.c  readme.txt
examples/EXMC/NOR/: exmc_norflash.c  exmc_norflash.h  main.c  readme.txt
examples/EXMC/SRAM/: exmc_sram.c  exmc_sram.h  main.c  readme.txt
examples/EXTI/Key_external_interrupt_mode/: gd32f10x_it.c  gd32f10x_it.h  main.c  readme.txt
examples/FMC/Erase_Program/: main.c  main.h  readme.txt
examples/FMC/Write_Protection/: main.c  readme.txt
examples/FWDGT/FWDGT_key/: gd32f10x_it.c  gd32f10x_it.h  main.c  readme.txt  systick.h
examples/GPIO/Debugport_use_as_GPIO_output/: gd32f10x_it.c  gd32f10x_it.h  main.c  readme.txt  systick.c
examples/GPIO/Keyboard_polling_mode/: main.c  main.h  readme.txt  systick.c  systick.h
examples/GPIO/Running_led/: gd32f10x_it.c  main.c  readme.txt
examples/I2C/I2C_EEPROM/: at24cxx.c  at24cxx.h  gd32f10x_it.c  i2c.c  i2c.h  main.c  readme.txt  systick.h
examples/I2C/I2C_EEPROM_dma/: at24cxx.c  at24cxx.h  gd32f10x_it.h  i2c.c  i2c.h  (+3 more)
(+611 files in other folders)
